<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/tbl0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:id="@id/tr0"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_yourname" />
    </TableRow>

    <TableRow
        android:id="@id/tr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_username" />
    </TableRow>

    <TableRow
        android:id="@id/tr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:id="@id/tr3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_confirmpassword" />
    </TableRow>

    <TableRow
        android:id="@id/tr4"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/edt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_mobile"
            android:inputType="phone" />
    </TableRow>

    <TableRow
        android:id="@id/tr5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_edittext_email"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow
        android:id="@id/tr6"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_button_register" />
    </TableRow>

</TableLayout>