<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/tbl0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:id="@id/tr0"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_edittext_username" />
    </TableRow>

    <TableRow
        android:id="@id/tr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@id/edt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_edittext_password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:id="@id/tr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_button_login" />

        <TextView
            android:id="@id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_tv_or" />

        <Button
            android:id="@id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_button_register" />
    </TableRow>

</TableLayout>